--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "node-gerador": "server.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./bin/server.js"
   },
   "keywords": [],
   "author": "",
